create ascii post node

--- a/src/polygonjs/scenes/scene_01/autogenerated/manifest.json
+++ b/src/polygonjs/scenes/scene_01/autogenerated/manifest.json
@@ -1,27 +1,30 @@
 {
-	"properties": "1675552563896",
+	"properties": "1729257539380",
 	"root": "1675552563896",
 	"nodes": {
-		"geo1": "1675552563896",
+		"geo1": "1729257539380",
 		"geo1/MAT": "1675552563896",
-		"ground": "1675552563896",
+		"ground": "1729257539380",
 		"ground/MAT": "1675552563896",
-		"ground/MAT/meshStandardBuilder1": "1675552563896",
+		"ground/MAT/meshStandardBuilder1": "1729257539380",
 		"COP": "1675552563896",
-		"lights": "1675552563896",
-		"cameras": "1675552563896",
-		"cameras/cameraControls1": "1675552563896"
+		"lights": "1729257539380",
+		"cameras": "1729257539380",
+		"cameras/cameraControls1": "1729257592980",
+		"cameras/cameraPostProcess1": "1729257810213",
+		"cameras/cameraRenderer1": "1729257539380"
 	},
 	"shaders": {
 		"/ground/MAT/meshStandardBuilder1": {
-			"vertex": "1675552563896",
-			"fragment": "1675552563896",
-			"customDepthMaterial.vertex": "1675552563896",
-			"customDepthMaterial.fragment": "1675552563896",
-			"customDistanceMaterial.vertex": "1675552563896",
-			"customDistanceMaterial.fragment": "1675552563896",
-			"customDepthDOFMaterial.vertex": "1675552563896",
-			"customDepthDOFMaterial.fragment": "1675552563896"
+			"vertex": "1729257539380",
+			"fragment": "1729257539380",
+			"customDepthMaterial.vertex": "1729257539380",
+			"customDepthMaterial.fragment": "1729257539380",
+			"customDistanceMaterial.vertex": "1729257539380",
+			"customDistanceMaterial.fragment": "1729257539380",
+			"customDepthDOFMaterial.vertex": "1729257539380",
+			"customDepthDOFMaterial.fragment": "1729257539380"
 		}
-	}
+	},
+	"jsFunctionBodies": {}
 }
